2000-04-26  Darin Adler  <darin@eazel.com>

	* gnome-vfs-private-ops.c: 
	(gnome_vfs_open_uri_cancellable),
	(gnome_vfs_create_uri_cancellable), (gnome_vfs_close_cancellable),
	(gnome_vfs_read_cancellable), (gnome_vfs_write_cancellable),
	(gnome_vfs_seek_cancellable),
	(gnome_vfs_get_file_info_uri_cancellable),
	(gnome_vfs_get_file_info_from_handle_cancellable),
	(gnome_vfs_truncate_uri_cancellable),
	(gnome_vfs_truncate_handle_cancellable),
	(gnome_vfs_make_directory_for_uri_cancellable),
	(gnome_vfs_find_directory_cancellable),
	(gnome_vfs_remove_directory_from_uri_cancellable),
	(gnome_vfs_unlink_from_uri_cancellable),
	(gnome_vfs_move_uri_cancellable),
	(gnome_vfs_check_same_fs_uris_cancellable),
	(gnome_vfs_set_file_info_cancellable):
	Changed these all so they will handle the case where the are
	cancelled before they even begin.

2000-04-26  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-job.c: (execute_get_file_info):
	Fixed bug that would result in a thread that never dies.

2000-04-26  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-xfer.c
	Fix a crash caused by using the wrong call to free a uri_list.
	
2000-04-26  Pavel Cisler  <pavel@eazel.com>

	Added gnome_vfs_find_directory to return well known directories.
	For now only returns Trash.
	* libgnomevfs/gnome-vfs-find-directory.c:
	* libgnomevfs/gnome-vfs-find-directory.h:
	* libgnomevfs/gnome-vfs-private-ops.c:
	* libgnomevfs/gnome-vfs-private-ops.h:
	* libgnomevfs/gnome-vfs-private-types.h:
	* libgnomevfs/gnome-vfs-types.h:
	* libgnomevfs/Makefile.am:
	(gnome_vfs_find_directory_cancellable),
	(gnome_vfs_find_directory):
	Added gnome_vfs_find_directory to return well known directories.
	For now only returns Trash.

	* modules/file-method.c:
	* modules/translate-method.c:
	(do_find_directory), (tr_do_find_directory):
	Add support for find_directory.

	* modules/bzip2-method.c:
	* modules/extfs-method.c:
	* modules/ftp-method.c:
	* modules/gconf-method.c:
	* modules/gzip-method.c: