@@ -1,3 +1,15 @@
+2000-04-26  Pavel Cisler  <pavel@eazel.com>
+
+	* libgnomevfs/gnome-vfs-xfer.c:
+	(gnome_vfs_xfer_empty_trash):
+	Set up progress phase properly. This fixes a problem with the 
+	progress dialog getting instantiated twice.
+
+	* libgnomevfs/gnome-vfs-xfer.c:
+	(remove_directory):
+	Properly initialize and return result.
+	
+
 2000-04-26  Darin Adler  <darin@eazel.com>
 
 	* gnome-vfs-private-ops.c: 
